# secure-messenger

./: .gitignore  README.md
backend/fastapi/: .env.like  .gitignore  docker-compose.yml  pyproject.toml
backend/fastapi/centrifugo/: config.json
backend/fastapi/docker/: Dockerfile
backend/fastapi/grafana/dashboards/: loki-dashboard.json  prometheus-dashboard.json
backend/fastapi/grafana/provisioning/dashboards/: loki.yaml
backend/fastapi/grafana/provisioning/datasources/: loki.yml  prometheus.yaml
backend/fastapi/prometheus/: prometheus.yml
backend/fastapi/scripts/web/: startup.sh
backend/fastapi/src/app/: base_settings.py  depends.py  log.py  log_route.py  main.py  root.py  settings.py
backend/fastapi/src/app/api/: v1.py
backend/fastapi/src/app/postgres/: base.py  decimal_numeric.py  intpk.py  timestamp_base.py
backend/fastapi/src/app/utils/: auth.py  centrifugo.py  jwt.py
backend/fastapi/src/app/utils/exceptions/: decorator.py  schema.py
backend/fastapi/src/chat/: depends.py  models.py  repositories.py
backend/fastapi/src/chat/schemas/api/: v1.py
backend/fastapi/src/chat_participant/: depends.py  models.py  repositories.py
backend/fastapi/src/chat_participant/schemas/api/: v1.py
backend/fastapi/src/message/: depends.py  models.py  repositories.py
backend/fastapi/src/message/schemas/api/: v1.py
backend/fastapi/src/message_read/: depends.py  models.py  repositories.py
backend/fastapi/src/message_read/schemas/api/: v1.py
backend/fastapi/src/user/: depends.py  models.py  repositories.py
backend/fastapi/src/user/schemas/api/: v1.py
(+42 files in other folders)
